Use java 21 features